--- a/index.html
+++ b/index.html
@@ -11,14 +11,364 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
+    <!-- ----slider css-- -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
-    
+    <!-- =======================
+              header 
+    ========================= -->
+    <header class="blue-bg py-4">
+      <div class="container">
+        <div class="header-main d-flex align-items-center justify-content-between">
+          <a href="index.html" class="logo d-block">
+            <img src="img/logo.svg" alt="" class="w-100">
+          </a>
+          <nav>
+            <ul class="d-flex align-items-center mb-0 pb-0">
+              <li>
+                <a href="#">Cards</a>
+              </li>
+              <li>
+                <a href="#">Loans</a>
+              </li>
+              <li>
+                <a href="#">Insurance</a>
+              </li>
+              <li>
+                <a href="#">Accounts</a>
+              </li>
+              <li>
+                <a href="#">Investment</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+              <li>
+                <a href="#">Rewards</a>
+              </li>
+              <li class="user-icon list-style-none">
+                <a href="#" class="d-flex align-items-center">
+                    <i class="fas fa-user me-2 py-2 rounded-circle px-2"></i>
+                    <div><span>Login</span></div>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <!-- =======================
+          hero section 
+    ========================= -->
+    <div class="hero-sec blue-bg py-4 py-md-0">
+        <div class="hero-main px-4 px-md-0 position-relative d-flex flex-wrap align-items-center">
+          <div class="hero-txt col-md-6 py-3">
+            <h1 class="text-light fs-1 lh-sm fw-bold">Empowering You to Make Smarter Financial Decisions</h1>
+            <p class="fs-6 text-light mt-2">Get the best credit cards, loans and travel insurance in Hong Kong.</p>
+            <div class="d-lg-flex">
+              <a href="#" class="d-block text-center px-5 py-3 s-5 fw-bold text-decoration-none rounded-2 mt-2 me-lg-3 btn-bg my-btn text-light">Sign Up</a>
+              <a href="#" class="d-block text-center px-5 py-3 s-5 fw-bold text-decoration-none rounded-2 mt-2 bg-white my-btn text-dark">Log In</a>
+            </div>
+          </div>
+          <div class="hero-img h-100 col-md-6">
+            <img src="img/home-hero.png" alt="" class="w-100 h-100">
+          </div>
+          <div class="hero-svg h-100 col-6 position-absolute d-none d-md-block">
+            <svg class="h-100" viewBox="0 0 295 456" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M 0 456 H 295 C 241 435 228 424 209 408 C 99 305 44.7604 130.617 40.6133 0 H 0 V 456 Z" fill="#132b46"></path></svg>
+          </div>
+        </div>
+    </div>
+    <!-- =======================
+       Finance products section 
+    ========================= -->
+    <div class="container py-4">
+      <div>
+        <h2 class="fs-2">Compare, choose and apply for the best personal finance products</h2>
+        <div class="row mt-4 finance-prod">
+          <div class="col-xl-2 col-lg-3 col-sm-4 col-6 my-3">
+            <a href="" class="shadow rounded-2 py-3 text-decoration-none d-flex flex-column justify-content-center">
+              <div>
+                <img src="img/prod-1.png" alt="" class="w-100">
+              </div>
+              <p class="text-center mt-3 text-dark ">Personal Loans</p>
+            </a>
+          </div>
+          <div class="col-xl-2 col-lg-3 col-sm-4 col-6 my-3">
+            <a href="" class="shadow rounded-1 py-3 text-decoration-none d-flex flex-column justify-content-center">
+              <div>
+                <img src="img/prod-2.png" alt="" class="w-100">
+              </div>
+              <p class="text-center mt-3 text-dark ">Credit Cards</p>
+            </a>
+          </div>
+          <div class="col-xl-2 col-lg-3 col-sm-4 col-6 my-3">
+            <a href="" class="shadow rounded-1 py-3 text-decoration-none d-flex flex-column justify-content-center">
+              <div>
+                <img src="img/prod-3.png" alt="" class="w-100">
+              </div>
+              <p class="text-center mt-3 text-dark ">Investments</p>
+            </a>
+          </div>
+          <div class="col-xl-2 col-lg-3 col-sm-4 col-6 my-3">
+            <a href="" class="shadow rounded-1 py-3 text-decoration-none d-flex flex-column justify-content-center">
+              <div>
+                <img src="img/prod-4.png" alt="" class="w-100">
+              </div>
+              <p class="text-center mt-3 text-dark ">Travel Insurance</p>
+            </a>
+          </div>
+          <div class="col-xl-2 col-lg-3 col-sm-4 col-6 my-3">
+            <a href="" class="shadow rounded-1 py-3 text-decoration-none d-flex flex-column justify-content-center">
+              <div>
+                <img src="img/prod-5.png" alt="" class="w-100">
+              </div>
+              <p class="text-center mt-3 text-dark ">Home Loans</p>
+            </a>
+          </div>
+          <div class="col-xl-2 col-lg-3 col-sm-4 col-6 my-3">
+            <a href="" class="shadow rounded-1 py-3 text-decoration-none d-flex flex-column justify-content-center">
+              <div>
+                <img src="img/prod-6.png" alt="" class="w-100">
+              </div>
+              <p class="text-center mt-3 text-dark ">Learn</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- =======================
+    get instant reward section 
+    ========================= -->
+    <div class="container py-5">
+      <div class="row my-5">
+        <div class="col-md-6">
+          <img src="img/reward.png" class="w-100" alt="">
+        </div>
+        <div class="col-md-6 mt-4 mt-md-0">
+          <h2 class="fs-1">Create a MoneySmart account and get instant rewards for the things you love</h2>
+          <p class="fs-6 mt-3">Join for free and enjoy exclusive cashback deals on Google Play™、Netflix、Nintendo、PlayStation Store、Steam & more. More exclusive offers to come!</p>
+          <a href="#" class="mt-2 my-btn d-inline-block text-light text-decoration-none fw-bold fs-6 text-capitalize btn-bg py-3 px-4">Find out how</a>
+        </div>
+      </div>
+    </div>
+     <!-- =======================
+    top deals 
+    ========================= -->
+    <div class="container py-4">
+      <div>
+        <h2 class="fs-1 fw-bold">Don't Miss Our Top Deals</h2>
+        <div class="row mt-4 finance-prod">
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="shadow h-100 rounded-2 py-4 px-3 d-block text-decoration-none ">
+              <h3 class="fs-2 color2-text fw-md">
+                SCB Credit Cards: Up to $1,599 Rewards
+              </h3>
+              <p class="fs-6 text-dark"><i>Ending 31st May 2023</i> </p>
+              <div class="col-4 mt-4">
+                <img src="img/top-deal-1.webp" alt="" class="w-100 rounded-circle">
+              </div>
+              <p class="text-dark mt-3">Apply for SC Smart Card now via MoneySmart to get extra <b>HK$1,200 Apple Gift Card or HK$1,200 Supermarket Gift Card or Shokz OpenRun Pro – EK Limited Edition S810 (Colour randomly distributed) (Retail price: HK$1,599)</b></p>
+              <p class="text-dark mt-5">[Referral Program] After applying for the card, get extra <b>HK$300 supermarket vouchers </b>by referring each relatives and friends to apply as well! The more you refer, the more rewards you get!</p>
+                <a href="#" class="mt-4 blue-txt text-primary text-decoration-none d-inline-block text-center py-1 px-3 border border-primary border-1 rounded-pill">See more details</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="shadow h-100 rounded-2 py-4 px-3 d-block text-decoration-none ">
+              <h3 class="fs-2 color2-text fw-md">
+                Personal Loan: Up to $15,699 Rewards
+              </h3>
+              <p class="fs-6 text-dark"><i>Ending 31st May 2023</i> </p>
+              <div class="col-4 mt-4">
+                <img src="img/top-deal-2.webp" alt="" class="w-100 rounded-circle">
+              </div>
+              <p class="text-dark mt-3">May offer! Successfully apply for Citi Speedy Cash Loan during 1 - 31 May and drawdown the specific loan products can enjoy <b>up to $15,699 Rewards !</b></p>
+                <a href="#" class="mt-4 blue-txt text-primary text-decoration-none d-inline-block text-center py-1 px-3 border border-primary border-1 rounded-pill">Compare Now</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="shadow h-100 rounded-2 py-4 px-3 d-block text-decoration-none ">
+              <h3 class="fs-2 color2-text fw-md">
+                Travel Insurance: Up to 35% Off
+              </h3>
+              <p class="fs-6 text-dark"><i>Ending 31st May 2023</i> </p>
+              <div class="col-4 mt-4">
+                <img src="img/top-deal-1.webp" alt="" class="w-100 rounded-circle">
+              </div>
+              <p class="text-dark mt-3">MoneySmart helps you compare 40+ Travel Insurance products in one go. Find the Best Travel Insurance Plan with Covid-19 coverage, flight delay or luggage loss coverage, and enjoy <b>up to 35% off Exclusive Discount or Supermarket e-coupon on specific products now!</b></p>
+                <a href="#" class="mt-4 blue-txt text-primary text-decoration-none d-inline-block text-center py-1 px-3 border border-primary border-1 rounded-pill">
+                  Start Comparing</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- =======================
+    how to claim rewards section 
+    ========================= -->
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <h2 class="fs-2 fw-md">How Do I Claim Rewards?</h2>
+        </div>
+        <div class="col-6">
+          <div class="video">
+            <iframe class="w-100" height="270" src="https://www.youtube.com/embed/lcuH0KDUeCY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+     <!-- =======================
+    trusted loan section 
+    ========================= -->
+    <div class="container py-4 py-md-5">
+      <div class="row flex-column flex-md-row align-items-center">
+        <div class="col-md-6">
+          <h2 class="fs-1">Trusted Personal Loans</h2>
+          <p class="fs-6 mt-3">Providing you with carefully selected loan products from trusted financial institutions without any hidden fees or costs.</p>
+          <a href="#" class="mt-2 my-btn d-inline-block text-light text-decoration-none fw-bold fs-6 text-capitalize btn-bg py-3 px-4">Compare Personal Loans</a>
+        </div>
+        <div class="col-md-6 mt-4 mt-md-0">
+          <img src="img/personal-loans.png" class="w-100" alt="">
+        </div>
+      </div>
+    </div>
+   <!-- =======================
+   Compare Credit Cards section 
+    ========================= -->
+    <div class="container py-4 py-md-5">
+      <div class="row flex-column-reverse flex-md-row align-items-center">
+        <div class="col-md-6 mt-4 mt-md-0">
+          <img src="img/credit-card.png" class="w-100" alt="">
+        </div>
+        <div class="col-md-6">
+          <h2 class="fs-1">Compare Credit Cards</h2>
+          <p class="fs-6 mt-3">Covering all major credit cards to ensure that your spending needs are served, with easy online applications and the best deals all in one place.</p>
+          <a href="#" class="mt-2 my-btn d-inline-block text-light text-decoration-none fw-bold fs-6 text-capitalize btn-bg py-3 px-4">Compare credit cards</a>
+        </div>
+      </div>
+    </div>
+       <!-- =======================
+   Compare Travel Insurance section 
+    ========================= -->
+    <div class="container py-4 py-md-5">
+      <div class="row flex-column flex-md-row align-items-center">
+        <div class="col-md-6 mt-4 mt-md-0">
+          <h2 class="fs-1">Compare Travel Insurance</h2>
+          <p class="fs-6 mt-3">Compare Travel Insurance with coverage including Covid-19, trip cancellation and loss or damage of baggage in one go.</p>
+          <a href="#" class="mt-2 my-btn d-inline-block text-light text-decoration-none fw-bold fs-6 text-capitalize btn-bg py-3 px-4">Find Travel Insurance</a>
+        </div>
+        <div class="col-md-6">
+          <img src="img/travel-insurrance.png" class="w-100" alt="">
+        </div>
+      </div>
+    </div>
+   <!-- =======================
+     content offering section 
+    ========================= -->
+    <div class="container py-4 py-md-5">
+      <div class="row flex-column flex-md-row align-items-center">
+        <div class="col-md-6">
+          <img src="img/unbiased-opinions.png" class="w-100" alt="">
+        </div>
+        <div class="col-md-6 mt-4 mt-md-0 ps-5">
+          <h2 class="fs-2">Our Content Offers Unbiased Opinions</h2>
+          <p class="fs-6 mt-4">Serving you a wide range of articles, videos and other resources to equip you to handle those important financial choices.</p>
+          <h3 class="fs-5">Content categories</h3>
+          <div class="row category">
+            <div class="col-4">
+              <div>
+                <img src="img/catg-1.png" alt="category">
+              </div>
+            </div>
+            <div class="col-4">
+              <div>
+                <img src="img/catg-2.png" alt="category">
+              </div>
+            </div>
+            <div class="col-4">
+              <div>
+                <img src="img/catg-3.png" alt="category">
+              </div>
+            </div>
+            <div class="col-4">
+              <div>
+                <img src="img/catg-4.png" alt="category">
+              </div>
+            </div>
+            <div class="col-4">
+              <div>
+                <img src="img/catg-5.png" alt="category">
+              </div>
+            </div>
+            <div class="col-4">
+              <div>
+                <img src="img/catg-6.png" alt="category">
+              </div>
+            </div>
+          </div>
+          <h3 class="fs-5">
+            Check out our extended content channels here:
+          </h3>
+        </div>
+      </div>
+    </div>
+      <!-- =======================
+    finance not stressful 
+    ========================= -->
+    <div class="container py-4">
+      <div>
+        <h2 class="fs-1 fw-bold">Personal finance doesn’t have to be stressful</h2>
+        <p class="fs-6">Stay on top of your finances - get tips and insights from our blog.</p>
+        <div class="row mt-4 finance-prod">
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="shadow h-100 rounded-2 py-4 px-4 d-block text-decoration-none ">
+              <h3 class="fs-5 fw-md">
+                Latest HKD Time Deposit Rates
+              </h3>
+              <div class="mt-4">
+                <img src="img/nt-stress-1.png" alt="" class="w-100">
+              </div>
+              <p class="fs-6 text-dark mt-5 pb-0">ZH version only.</p>
+                <a href="#" class="blue-txt text-primary text-decoration-none d-inline-block text-center">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="shadow h-100 rounded-2 py-4 px-4 d-block text-decoration-none ">
+              <h3 class="fs-5 fw-md">
+                Guide to buying HK Disneyland Tickets
+              </h3>
+              <div class="mt-4">
+                <img src="img/nt-stress-2.png" alt="" class="w-100">
+              </div>
+              <p class="fs-6 text-dark mt-5 pb-0">ZH version only.</p>
+                <a href="#" class="blue-txt text-primary text-decoration-none d-inline-block text-center">Read More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="shadow h-100 rounded-2 py-4 px-4 d-block text-decoration-none ">
+              <h3 class="fs-5 fw-md">
+                Guide to Financial Freedom (FIRE)
+              </h3>
+              <div class="mt-4">
+                <img src="img/nt-stress-3.png" alt="" class="w-100">
+              </div>
+              <p class="fs-6 text-dark mt-5 pb-0">ZH version only.</p>
+                <a href="#" class="blue-txt text-primary text-decoration-none d-inline-block text-center">Read More</a>
+            </div>
+          </div>
+         
+        </div>
+      </div>
+    </div>
     <!-- Bootstrap 5 JS CDN (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
     <script src="js/main.js"></script>
+    <!-- ------slick-js--- -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   </body>
 </html>
