--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                 <a href="#">Loans</a>
               </li>
               <li>
-                <a href="#">Insurance</a>
-              </li>
-              <li>
                 <a href="#">Accounts</a>
               </li>
               <li>
@@ -312,15 +309,29 @@
           <h3 class="fs-5">
             Check out our extended content channels here:
           </h3>
+          <div class="d-flex">
+            <a href="#" class="text-dark me-3 fs-5">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="text-dark me-3 fs-5">
+              <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#" class="text-dark me-3 fs-5">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="#" class="text-dark me-3 fs-5">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
       <!-- =======================
     finance not stressful 
     ========================= -->
-    <div class="container py-4">
+    <div class="container py-5">
       <div>
-        <h2 class="fs-1 fw-bold">Personal finance doesn’t have to be stressful</h2>
+        <h2 class="fs-1 fw-md">Personal finance doesn’t have to be stressful</h2>
         <p class="fs-6">Stay on top of your finances - get tips and insights from our blog.</p>
         <div class="row mt-4 finance-prod">
           <div class="col-lg-4 col-md-6 my-3">
@@ -360,6 +371,135 @@
             </div>
           </div>
          
+        </div>
+      </div>
+    </div>
+    <!-- =======================
+      contact
+    ========================= -->
+    <div class="contact blue-bg my-4">
+      <div class="container py-4 py-md-4">
+        <div class="row flex-column flex-md-row align-items-center">
+          <div class="col-md-6">
+            <img src="img/contact.png" class="w-100" alt="">
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0 ps-4">
+            <h2 class="fs-1 fw-bold text-light">Get in the know.
+            </h2>
+            <p class="fs-3 lh-sm text-light">Subscribe to our newsletter for the latest articles and deals.
+            </p>
+            <form action="" class="mt-3">
+              <input type="email" placeholder="Email address" class="py-2 bg-white text-dark px-3 fs-5 border border-1 border-primary w-100">
+              <button type="submit" class="mt-4 my-btn d-inline-block text-light text-decoration-none fw-bold fs-6 text-capitalize btn-bg py-3 px-4 border-0">
+                Subscribe Now
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+       <!-- =======================
+    finance goals
+    ========================= -->
+    <div class="container py-4">
+      <div>
+        <h2 class="fs-2 fw-md">We want to help you spend more time enjoying your financial goals, and less time figuring out how to get there.</h2>
+        <div class="row mt-4 finance-prod">
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="h-100 rounded-2 py-4  d-block text-decoration-none ">
+              <div class="col-8">
+                <img src="img/f-goals-1.png" alt="" class="w-100">
+              </div>
+              <h3 class="fs-5 fw-md mt-4 ">
+                Finance Simplified
+              </h3>
+              <p class="fs-6 text-dark mt-4 pb-0">We simplify the complex world of financial products in a relatable way, so that all the confusing jargon and information doesn’t stop you from making the right choices with your money.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="h-100 rounded-2 py-4  d-block text-decoration-none ">
+              <div class="col-8">
+                <img src="img/f-goals-2.png" alt="" class="w-100">
+              </div>
+              <h3 class="fs-5 fw-md mt-4 ">
+                Decisions And Applications Made Easy
+              </h3>
+              <p class="fs-6 text-dark mt-4 pb-0">Reaching your financial goals means choosing the right products to get you there. We do the hard work of sorting through the various products in the market, so you don’t have to.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 my-3">
+            <div class="h-100 rounded-2 py-4  d-block text-decoration-none ">
+              <div class="col-8">
+                <img src="img/f-goals-3.png" alt="" class="w-100">
+              </div>
+              <h3 class="fs-5 fw-md mt-4 ">
+                Deals That Add Value To Your Choices
+              </h3>
+              <p class="fs-6 text-dark mt-4 pb-0">We strive to bring you exclusive deals and promotions as we know the value you get out of your financial choices is important.
+              </p>
+            </div>
+          </div>
+         
+        </div>
+      </div>
+    </div>
+   <!-- =======================
+       brands
+    ========================= -->
+    <div class="container py-4 py-md-5">
+      <div class="row flex-column flex-md-row align-items-center">
+        <div class="col-md-6">
+          <img src="img/brands.png" class="w-100" alt="">
+        </div>
+        <div class="col-md-6 mt-4 mt-md-0 ps-4">
+          <h2 class="fs-2 fw-bold">We partner with all major financial providers and give you honest recommendations
+          </h2>
+          <div class="mt-4">
+            <h4 class="mt-3 fs-5 fw-bold">1,584,900 transactions</h4>
+            <p class="mb-0 pb-0">made to date</p>
+            <h4 class="mt-3 fs-5 fw-bold">87</h4>
+            <p class="mb-0 pb-0">banks and insurers</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- =======================
+         footer
+    ========================= -->
+    <div class="blue-bg footer">
+      <div class="container">
+        <div class="row border-bottom border-1 border-light py-3">
+          <div class="col d-sm-flex align-items-center justify-content-between">
+            <div class="logo-ftr ">
+              <img src="img/logo.svg" alt="" class="w-100">
+            </div>
+            <div class="d-flex align-items-center py-3">
+              <a href="#" class="text-light fs-5 ms-sm-4">About</a>
+              <a href="#" class="text-light fs-5 ms-4">Careers</a>
+              <a href="#" class="text-light fs-5 ms-4">Contact Us</a>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-6 col-sm-3">
+            <a href="#" class="text-light d-block py-1">Credit Cards</a>
+            <a href="#" class="text-light d-block py-1">Insurance</a>
+            <a href="#" class="text-light d-block py-1">Loans</a>
+          </div>
+          <div class="col-6 col-sm-3">
+            <a href="#" class="text-light d-block py-1">Blog</a>
+            <a href="#" class="text-light d-block py-1">Marketplace</a>
+          </div>
+          <div class="col-12 mt-3 mt-sm-0 col-sm-6">
+            <p class="mb-0 pb-0 text-light ">Disclaimer: At MoneySmart, MoneySmart HK Limited will do a variety of product listing services including but not limited to credit cards, personal loans, home loans and all products from virtual insurance companies.</p>
+          </div>
+        </div>
+        <!-- --------copyright----- -->
+        <div class="row mt-4">
+          <p class="text-center text-light small mt-3">
+            © 2009-2023 MoneySmart. All rights reserved. Use of this site constitutes acceptance of our Terms of Use and Privacy Policy.
+          </p>
         </div>
       </div>
     </div>
